# Ignosi-DLL

./: CMakeLists.txt  azure-pipelines.yml
lib/dll/: CMakeLists.txt
test/: CMakeLists.txt
